<resources>
    <string name="app_name">LoadCentral Diary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_deposit">Deposit</string>
    <string name="title_activity_sell_load">Sell Load</string>

    <!-- common buttons -->
    <string name="btn_submit">Submit</string>
    <string name="btn_save">Save</string>
    <string name="btn_clear">Clear</string>

    <string name="edittxt_datetime">Date</string> <!-- date only as of the moment -->

    <!-- deposit -->
    <string name="deposit_amount">Amount</string>

    <!-- sell load -->
    <string name="sell_load_product">Product</string>
    <string name="sell_load_number">Number</string>
    <string name="sell_load_balance">Balance</string>
    <string name="sell_load_paid">Paid</string>
    <string name="sell_load_unpaid">Unpaid</string>

    <!-- list view item menu -->
    <string name="menu_paid">Paid</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_details">Details</string>

    <!-- product category -->
    <string-array name="product_category">
        <item>E-load</item>
        <item>Call Cards</item>
        <item>Game Products</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_phonebook">Phonebook</string>
    <string name="title_activity_add_phonebook">Add New Contact</string>

    <!-- symbols -->
    <string name="peso_sign">\u20B1</string>

    <!-- loadcentral access numbers -->
    <string-array name="access_numbers">
        <item>MAIN,09229990214</item>
        <item>SMART,09209456856</item>
        <item>SMART,09209456857</item>
        <item>GLOBE,09178662418</item>
        <item>SUN,09228504340</item>
        <item>SUN,09224512799</item>
    </string-array>

    <!-- date ranges -->
    <string-array name="date_ranges">
        <item>This Month</item>
        <item>Last Week</item>
        <item>Last Month</item>
        <item>Last 3 Months</item>
        <item>Last 6 Months</item>
        <item>Last Year</item>
        <item>Custom Range</item>
        <item>All</item>
    </string-array>
    
    <!-- paid status -->
    <string-array name="paid_status">
        <item>All</item>
        <item>Paid</item>
        <item>Unpaid</item>
    </string-array>

    <!-- phonebook settings sort by entries -->
    <string-array name="phonebook_settings_sort_by_entries">
        <item>Name</item>
        <item>Number</item>
    </string-array>
    <!-- phonebook settings sort by values -->
    <string-array name="phonebook_settings_sort_by_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <!-- phonebook settings order by entries -->
    <string-array name="phonebook_settings_order_by_entries">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <!-- phonebook settings order by values -->
    <string-array name="phonebook_settings_order_by_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="title_activity_phonebook_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
