<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_sell_load"
    tools:context="com.example.stevenpila.loadcentraldiary.SellLoadActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.stevenpila.loadcentraldiary.MyEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/dateTxt"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:hint="@string/edittxt_datetime" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.stevenpila.loadcentraldiary.MyEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/numberTxt"
                android:layout_below="@+id/dateTxt"
                android:layout_centerHorizontal="true"
                android:hint="@string/sell_load_number"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:layout_marginRight="5dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton"
                android:src="@drawable/my_phonebook"
                android:padding="0dp"
                android:background="#00ffffff"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:onClick="chooseFromPhonebook" />

        </LinearLayout>

        <com.example.stevenpila.loadcentraldiary.MyAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/productTxt"
            android:ems="10"
            android:layout_above="@+id/radioGroup"
            android:layout_centerHorizontal="true"
            android:layout_alignParentStart="true"
            android:hint="@string/sell_load_product"
            android:layout_marginTop="5dp"
            android:singleLine="true" />

        <com.example.stevenpila.loadcentraldiary.MyEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/balanceTxt"
            android:hint="@string/sell_load_balance"
            android:text="0.0"
            android:layout_below="@+id/numberTxt"
            android:layout_alignParentStart="true"
            android:editable="true"
            android:enabled="true"
            android:layout_marginTop="5dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/balanceTxt"
            android:layout_alignParentStart="true"
            android:id="@+id/radioGroup"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sell_load_paid"
                android:id="@+id/paidRadioBtn"
                android:checked="true"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:onClick="paidUnpaidButtonClick" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sell_load_unpaid"
                android:id="@+id/unpaidRadioBtn"
                android:checked="false"
                android:layout_weight="1"
                android:onClick="paidUnpaidButtonClick" />

        </RadioGroup>

        <com.example.stevenpila.loadcentraldiary.MyEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/descriptionTxt"
            android:hint="Description (Optional)"
            android:layout_marginTop="5dp"
            android:maxLines="5"
            android:nestedScrollingEnabled="false"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_below="@+id/radioGroup"
            android:layout_alignParentStart="true">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_submit"
                android:id="@+id/submitBtn"
                android:layout_below="@+id/linearLayout"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:clickable="true"
                android:enabled="true"
                android:onClick="submitButtonOnClick" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_clear"
                android:id="@+id/clearBtn"
                android:layout_alignBottom="@+id/submitBtn"
                android:layout_toEndOf="@+id/submitBtn"
                android:layout_weight="1"
                android:onClick="clearButtonOnClick"
                android:enabled="true"
                android:clickable="true" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
