<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_deposit"
    tools:context="com.example.stevenpila.loadcentraldiary.DepositActivity">

    <com.example.stevenpila.loadcentraldiary.MyEditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/date"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="Date"
        android:editable="false"
        android:textIsSelectable="false"
        android:maxLines="10"
        android:minLines="10" />

    <com.example.stevenpila.loadcentraldiary.MyEditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/amount"
        android:layout_below="@+id/date"
        android:layout_centerHorizontal="true"
        android:hint="@string/deposit_amount"
        android:autoText="false"
        android:text="0"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/amount"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit"
            android:id="@+id/submit"
            android:clickable="true"
            android:enabled="true"
            android:layout_weight="0.50"
            android:onClick="submitButtonOnClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_clear"
            android:id="@+id/clear"
            android:layout_weight="0.50"
            android:clickable="true"
            android:enabled="true"
            android:onClick="clearButtonOnClick" />
    </LinearLayout>

</RelativeLayout>
